--- a/css/style.css
+++ b/css/style.css
@@ -297,12 +297,12 @@ div.photo {
 	content: "〜";
 	padding-left: 10px;
 }
-.flex {
+#flex {
     margin: 5px 0px 30px;
     padding-left: 0;
     text-align: center;
 }
-.flex .box {
+#flex .box {
     border: 3px solid #d3d3d3;
     list-style: none;
     display: inline-flex;
@@ -312,11 +312,11 @@ div.photo {
     margin: 3px;
     opacity: 0;
 }
-.flex figure{
+#flex figure{
   margin: 0;     /* マージンの初期化 */
   display: none; /* 最初に画像を隠しておく */
 }
-.flex figure:target{
+#flex figure:target{
   display: block;  /* 画像を表示する */
   position: fixed; /* スクロールしても画像を動かさない */
   top: 0;          /* 画面全体に対して画像を中央に設置する */
@@ -325,7 +325,7 @@ div.photo {
   right: 0;
   z-index: 100;    /* 画像を一番前に表示する */
 }
-.flex figure:target #overlay{
+#flex figure:target #overlay{
   position: absolute;        /* 画像が重なるように */
   top: 0;                    /* 4つを0にして画面全体に広げる */
   bottom: 0;
@@ -339,7 +339,7 @@ div.photo {
   text-decoration: none;      /* リンクなので文字に下線など装飾が付かないようにする */
   color: #fff;
 }
-.flex figure:target img{
+#flex figure:target img{
   animation: fadein .3s;   /* 0.3秒かけたフェードイン効果 */
 }
 @keyframes fadein{         /* フェードイン効果の中身 */
