--- a/css/style.css
+++ b/css/style.css
@@ -312,11 +312,11 @@ div.photo {
     margin: 3px;
     opacity: 0;
 }
-.flex .box figure{
+.flex .box .figure{
   margin: 0;     /* マージンの初期化 */
   display: none; /* 最初に画像を隠しておく */
 }
-.flex .box figure:target{
+.flex .box .figure:target{
   display: block;  /* 画像を表示する */
   position: fixed; /* スクロールしても画像を動かさない */
   top: 0;          /* 画面全体に対して画像を中央に設置する */
@@ -325,7 +325,7 @@ div.photo {
   right: 0;
   z-index: 100;    /* 画像を一番前に表示する */
 }
-.flex .box figure:target #overlay{
+.flex .box .figure:target #overlay{
   position: absolute;        /* 画像が重なるように */
   top: 0;                    /* 4つを0にして画面全体に広げる */
   bottom: 0;
@@ -339,7 +339,7 @@ div.photo {
   text-decoration: none;      /* リンクなので文字に下線など装飾が付かないようにする */
   color: #fff;
 }
-.flex .box figure:target img{
+.flex .box .figure:target img{
   animation: fadein .3s;   /* 0.3秒かけたフェードイン効果 */
 }
 @keyframes fadein{         /* フェードイン効果の中身 */
@@ -350,23 +350,6 @@ div.photo {
   100%{
     transform: scale(1);
     opacity: 1;
-  }
-}
-/*ふわっと表示*/
-.fadeUp {
- animation-name:fadeUpAnime;
- animation-duration:0.5s;
- animation-fill-mode:forwards;
- opacity: 0;
- }
-@keyframes fadeUpAnime{
-  from {
-    opacity: 0;
-  transform: translateY(100px);
-  }
-  to {
-    opacity: 1;
-  transform: translateY(0);
   }
 }
 /*ふわっと表示*/
